<resources>
    <string name="app_name">Observatório Mirim</string>
    <string name="entradas">Entradas</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="estoque">Estoque</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="enviar">Enviar</string>
    <string name="login_automativo">Logar Automaticamente</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_proximo">PRÓXIMO</string>
    <string name="entradas_dois_pontos">Entradas: </string>
    <string name="marca_do_produto">Marca do Produto</string>
    <string name="data_validade_dois_pontos">Data de validade:</string>
    <string name="dia">Dia</string>
    <string name="mes">Mês</string>
    <string name="ano">Ano</string>
    <string name="quantidade">Quantidade</string>
    <string name="unidade">Unidade</string>
    <string name="observacao">Observação</string>
    <string name="dar_entrada">Dar Entrada</string>
    <string name="produto_dois_pontos">Produto: </string>
    <string name="terminei">Terminei</string>
    <string name="sincronizar_agora">Sincronizar Agora</string>
    <string name="sincronizar_depois">Sincronizar Depois</string>
    <string name="cancelar_entrada">Cancelar Entrada</string>
    <string name="informe_os_alunos">Alunos</string>
    <string name="desc_alunos_entrada">Informe os alunos que participaram da entrada:</string>
    <string name="desc_obs_entrada">Caso seja necessário, informe uma observação para a entrada:</string>
</resources>
