<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/mainTagAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/informe_os_alunos"
            android:imeOptions="actionDone"
            android:inputType="textCapWords" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/mainTagChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacingVertical="4dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/observacao"
            android:layout_marginBottom="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aluno_observacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="20"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/botao_terminar_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/terminei"
            android:layout_gravity="bottom"
            android:textColor="#fff" />

    </LinearLayout>

</LinearLayout>